--- a/client/src/styles/components/_todolist.scss
+++ b/client/src/styles/components/_todolist.scss
@@ -11,19 +11,20 @@
     border-radius: 3.5%;
     // border: 1px solid $silver-color-border-background;
     box-shadow: 3.5px 3.5px 3.5px $silver-color-shadow-background;
-    padding: 15px;
     height: 600px;
-    width: 350px;
-    overflow-y: auto;
+    width: 340px;
+    padding: 20px;
+    overflow: auto;
 
     &__todo {
       display: grid;
-      justify-content: center;
       grid-template-rows: 60px;
-      grid-template-columns: 100px 100px 120px;
+      grid-template-columns: 120px 100px 100px;
 
       &__title {
         grid-column: 1 / 3;
+        justify-self: start;
+        align-self: center;
         font-size: $m-size;
         color: #1d1c1c;
         -webkit-text-fill-color: #313131;
@@ -32,9 +33,9 @@
       &__btn {
         @include gold-gradient-background;
         grid-column: 3 / 4;
-        justify-self: end;
+        justify-self: center;
         align-self: center;
-        width: 65px;
+        width: 60px;
         height: 20px;
         border: none;
         border-radius: 5px;
@@ -48,6 +49,47 @@
     // border: 1px solid $gold-color-border-background;
     box-shadow: 3.5px 3.5px 3.5px $gold-color-shadow-background;
     padding: 15px;
+    height: 600px;
+    width: 340px;
+
+    &__todo {
+      display: grid;
+      grid-template-rows: 60px;
+      grid-template-columns: 120px 100px 100px;
+
+      &__title {
+        font-size: $m-size;
+        grid-column: 1 / 3;
+        align-self: center;
+        color: #1d1c1c;
+        -webkit-text-fill-color: #313131;
+      }
+
+      &__btn {
+        @include silver-gradient-background;
+        grid-column: 3 / 4;
+        align-self: center;
+        justify-self: center;
+        width: 60px;
+        height: 20px;
+        border: none;
+        border-radius: 5px;
+      }
+    }
+
+    &__rate {
+      margin-bottom: 10px;
+      text-align: center;
+      font-size: $l-size;
+      font-weight: 900;
+      color: #1d1c1c;
+      -webkit-text-fill-color: #313131;
+
+      &-text {
+        font-size: $m-size;
+        font-weight: 600;
+      }
+    }
   }
 
   &--grid {
@@ -76,6 +118,7 @@
   display: block;
   margin: 0 auto;
   padding: 8px;
+  margin-bottom: 10px;
   width: 300px;
   height: 35px;
   color: rgb(185, 179, 179);
