--- a/client/src/styles/base/_settings.scss
+++ b/client/src/styles/base/_settings.scss
@@ -79,6 +79,11 @@ $xl-size: 4.8rem;
   width: 400px;
   height: 500px;
   border-radius: 15px;
+
+  @media (max-width: 500px) {
+    width: 275px;
+    height: 360px;
+  }
 }
 
 @mixin placeholder {
@@ -86,4 +91,8 @@ $xl-size: 4.8rem;
   -webkit-text-fill-color: #dbd5d5;
   padding: 10px 10px;
   font-size: 1.8rem;
+
+  @media (max-width: 500px) {
+    font-size: 1rem;
+  }
 }
