--- a/client/src/styles/components/_todoform.scss
+++ b/client/src/styles/components/_todoform.scss
@@ -9,6 +9,10 @@
     grid-template-columns: 300px;
     justify-content: center;
 
+    @media (max-width: 500px) {
+      grid-template-rows: 72px 144px 72px 57px;
+    }
+
     &--title {
       font-size: 2.5rem;
       font-weight: 800;
@@ -49,33 +53,48 @@
     @include dark-gradient-text;
 
     display: grid;
-    grid-template-rows: 50px 50px 50px 230px 50px 50px;
+    grid-template-rows: 50px 50px 50px 230px 90px;
     grid-template-columns: repeat(3, 1fr);
+
+    @media (max-width: 500px) {
+      grid-template-rows: 38px 35px 38px 165px 64px;
+    }
 
     &--title-label {
       font-size: $m-size;
       font-weight: 800;
       grid-column: 1 / 2;
-      justify-self: center;
+      justify-self: left;
+      padding-left: 5px;
     }
 
     &--title-field {
       @include dark-gradient-background;
       @include placeholder;
       grid-column: 1 / 4;
+
+      @media (max-width: 500px) {
+        width: 244px;
+        margin-top: 5px;
+      }
     }
 
     &--text-label {
       font-size: $m-size;
       font-weight: 800;
       grid-column: 1 / 2;
-      justify-self: center;
+      justify-self: left;
+      padding-left: 5px;
     }
 
     &--text-field {
       @include dark-gradient-background;
       @include placeholder;
       grid-column: 1 / 4;
+
+      @media (max-width: 500px) {
+        margin-top: 5px;
+      }
     }
 
     &--complete-label {
@@ -86,17 +105,10 @@
       justify-self: center;
     }
 
-    &--complete-field {
-      grid-column: 2 / 3;
-      grid-row: 5 / 6;
-      justify-self: end;
-      align-self: center;
-    }
-
     &--done {
       @include gold-gradient-background;
       grid-column: 2 / 3;
-      grid-row: 6 / 7;
+      grid-row: 5 / 6;
       justify-self: center;
       align-self: center;
       border: none;
@@ -104,32 +116,46 @@
       width: 80px;
       height: 40px;
       font-weight: 800;
+
+      @media (max-width: 500px) {
+        width: 60px;
+        height: 30px;
+      }
     }
   }
 
   &__new {
     display: grid;
     grid-template-rows: 45px 45px 50px 250px 70px;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, minmax(120px, 200px));
+
+    @media (max-width: 500px) {
+      grid-template-rows: 36px 33px 36px 180px 50px;
+    }
 
     &--title-label {
       @include dark-gradient-text;
-      justify-self: center;
+      justify-self: left;
       font-weight: 800;
       font-size: $m-size;
     }
 
     &--title-field {
       @include dark-gradient-background;
+      margin-top: 8px;
       padding: 15px;
       grid-column: 1 / -1;
       grid-row: 2 / 3;
       color: #a09c9c;
+
+      @media (max-width: 500px) {
+        padding: 5px 8px;
+      }
     }
 
     &--text-label {
       @include dark-gradient-text;
-      justify-self: center;
+      justify-self: left;
       font-weight: 800;
       font-size: $m-size;
       grid-row: 3 / 4;
@@ -137,6 +163,7 @@
 
     &--text-field {
       @include dark-gradient-background;
+      margin-top: 8px;
       padding: 15px;
       grid-column: 1 / -1;
       grid-row: 4 / 5;
@@ -155,6 +182,12 @@
       border-radius: 5px;
       border: none;
       background: #802626;
+
+      @media (max-width: 500px) {
+        padding-top: 4.5px;
+        width: 72px;
+        height: 28px;
+      }
     }
 
     &--next {
@@ -167,6 +200,11 @@
       height: 40px;
       grid-row: 5 / 6;
       grid-column: 2 / 3;
+
+      @media (max-width: 500px) {
+        width: 72px;
+        height: 28px;
+      }
     }
   }
 
@@ -175,6 +213,10 @@
     display: grid;
     grid-template-rows: 50px 50px 60px 50px 200px 60px;
     grid-template-columns: repeat(2, 1fr);
+
+    @media (max-width: 500px) {
+      grid-template-rows: 36px 36px 44px 36px 144px 44px;
+    }
 
     &--instruction {
       grid-column: 1 / -1;
