--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -39,9 +39,8 @@ textarea {
 .header__container {
   width: 100%;
   display: grid;
-  justify-content: center;
   grid-template-rows: 150px;
-  grid-template-columns: 120px 500px 120px; }
+  grid-template-columns: repeat(3, minmax(100px, 1fr)); }
 
 .header__title {
   border: #dcdce0;
@@ -59,8 +58,9 @@ textarea {
 .btn--link {
   font-size: 1.6rem;
   grid-column: 3 / 4;
+  padding-top: 15px;
   align-self: center;
-  justify-self: left; }
+  justify-self: center; }
 
 .todo {
   background: -webkit-linear-gradient(#313130, #363633);
@@ -69,19 +69,21 @@ textarea {
 
 .todolist {
   margin: 5px auto;
+  height: 75vh;
   display: grid;
-  grid-template-rows: 600px;
-  grid-template-columns: repeat(2, 1fr);
-  grid-column-gap: 30px; }
+  grid-template-rows: repeat(auto-fit, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
+  grid-column-gap: 30px;
+  grid-row-gap: 30px;
+  justify-content: center; }
   .todolist__not-completed {
     background: #e5e4e2;
     background: radial-gradient(farthest-corner at 50% 53%, #d6d5d4, #c7c5c5da);
     border-radius: 3.5%;
     box-shadow: 3.5px 3.5px 3.5px rgba(51, 50, 50, 0.8);
-    height: 600px;
-    width: 340px;
     padding: 20px;
-    overflow: auto; }
+    overflow: auto;
+    justify-self: center; }
     .todolist__not-completed__todo {
       display: grid;
       grid-template-rows: 60px;
@@ -98,8 +100,8 @@ textarea {
         grid-column: 3 / 4;
         justify-self: center;
         align-self: center;
-        width: 60px;
-        height: 20px;
+        width: 70px;
+        height: 25px;
         border: none;
         border-radius: 5px; }
   .todolist__completed {
@@ -107,8 +109,7 @@ textarea {
     border-radius: 3.5%;
     box-shadow: 3.5px 3.5px 3.5px rgba(73, 60, 30, 0.8);
     padding: 15px;
-    height: 600px;
-    width: 340px; }
+    justify-self: center; }
     .todolist__completed__todo {
       display: grid;
       grid-template-rows: 60px;
@@ -125,8 +126,8 @@ textarea {
         grid-column: 3 / 4;
         align-self: center;
         justify-self: center;
-        width: 60px;
-        height: 20px;
+        width: 70px;
+        height: 25px;
         border: none;
         border-radius: 5px; }
     .todolist__completed__rate {
@@ -182,6 +183,10 @@ textarea {
   width: 400px;
   height: 500px;
   border-radius: 15px; }
+  @media (max-width: 500px) {
+    .todoform {
+      width: 275px;
+      height: 360px; } }
   .todoform__text {
     background: -webkit-linear-gradient(#313130, #363633);
     -webkit-background-clip: text;
@@ -190,6 +195,9 @@ textarea {
     grid-template-rows: 100px 200px 100px 80px;
     grid-template-columns: 300px;
     justify-content: center; }
+    @media (max-width: 500px) {
+      .todoform__text {
+        grid-template-rows: 72px 144px 72px 57px; } }
     .todoform__text--title {
       font-size: 2.5rem;
       font-weight: 800;
@@ -222,13 +230,17 @@ textarea {
     -webkit-background-clip: text;
     -webkit-text-fill-color: #1f1d1d;
     display: grid;
-    grid-template-rows: 50px 50px 50px 230px 50px 50px;
+    grid-template-rows: 50px 50px 50px 230px 90px;
     grid-template-columns: repeat(3, 1fr); }
+    @media (max-width: 500px) {
+      .todoform__input {
+        grid-template-rows: 38px 35px 38px 165px 64px; } }
     .todoform__input--title-label {
       font-size: 1.6rem;
       font-weight: 800;
       grid-column: 1 / 2;
-      justify-self: center; }
+      justify-self: left;
+      padding-left: 5px; }
     .todoform__input--title-field {
       height: 100%;
       background: #272626;
@@ -244,11 +256,19 @@ textarea {
       padding: 10px 10px;
       font-size: 1.8rem;
       grid-column: 1 / 4; }
+      @media (max-width: 500px) {
+        .todoform__input--title-field {
+          font-size: 1rem; } }
+      @media (max-width: 500px) {
+        .todoform__input--title-field {
+          width: 244px;
+          margin-top: 5px; } }
     .todoform__input--text-label {
       font-size: 1.6rem;
       font-weight: 800;
       grid-column: 1 / 2;
-      justify-self: center; }
+      justify-self: left;
+      padding-left: 5px; }
     .todoform__input--text-field {
       height: 100%;
       background: #272626;
@@ -264,21 +284,22 @@ textarea {
       padding: 10px 10px;
       font-size: 1.8rem;
       grid-column: 1 / 4; }
+      @media (max-width: 500px) {
+        .todoform__input--text-field {
+          font-size: 1rem; } }
+      @media (max-width: 500px) {
+        .todoform__input--text-field {
+          margin-top: 5px; } }
     .todoform__input--complete-label {
       font-size: 1.6rem;
       font-weight: 800;
       grid-column: 1 / 3;
       grid-row: 5 / 6;
       justify-self: center; }
-    .todoform__input--complete-field {
-      grid-column: 2 / 3;
-      grid-row: 5 / 6;
-      justify-self: end;
-      align-self: center; }
     .todoform__input--done {
       background: radial-gradient(farthest-corner at 50% 50%, #dac289, #caad69);
       grid-column: 2 / 3;
-      grid-row: 6 / 7;
+      grid-row: 5 / 6;
       justify-self: center;
       align-self: center;
       border: none;
@@ -286,15 +307,22 @@ textarea {
       width: 80px;
       height: 40px;
       font-weight: 800; }
+      @media (max-width: 500px) {
+        .todoform__input--done {
+          width: 60px;
+          height: 30px; } }
   .todoform__new {
     display: grid;
     grid-template-rows: 45px 45px 50px 250px 70px;
-    grid-template-columns: repeat(2, 1fr); }
+    grid-template-columns: repeat(2, minmax(120px, 200px)); }
+    @media (max-width: 500px) {
+      .todoform__new {
+        grid-template-rows: 36px 33px 36px 180px 50px; } }
     .todoform__new--title-label {
       background: -webkit-linear-gradient(#313130, #363633);
       -webkit-background-clip: text;
       -webkit-text-fill-color: #1f1d1d;
-      justify-self: center;
+      justify-self: left;
       font-weight: 800;
       font-size: 1.6rem; }
     .todoform__new--title-field {
@@ -307,15 +335,19 @@ textarea {
       /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
       background-repeat: no-repeat;
       background-attachment: fixed;
+      margin-top: 8px;
       padding: 15px;
       grid-column: 1 / -1;
       grid-row: 2 / 3;
       color: #a09c9c; }
+      @media (max-width: 500px) {
+        .todoform__new--title-field {
+          padding: 5px 8px; } }
     .todoform__new--text-label {
       background: -webkit-linear-gradient(#313130, #363633);
       -webkit-background-clip: text;
       -webkit-text-fill-color: #1f1d1d;
-      justify-self: center;
+      justify-self: left;
       font-weight: 800;
       font-size: 1.6rem;
       grid-row: 3 / 4; }
@@ -329,6 +361,7 @@ textarea {
       /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
       background-repeat: no-repeat;
       background-attachment: fixed;
+      margin-top: 8px;
       padding: 15px;
       grid-column: 1 / -1;
       grid-row: 4 / 5;
@@ -345,6 +378,11 @@ textarea {
       border-radius: 5px;
       border: none;
       background: #802626; }
+      @media (max-width: 500px) {
+        .todoform__new--cancel {
+          padding-top: 4.5px;
+          width: 72px;
+          height: 28px; } }
     .todoform__new--next {
       background: radial-gradient(farthest-corner at 50% 50%, #dac289, #caad69);
       border: none;
@@ -355,6 +393,10 @@ textarea {
       height: 40px;
       grid-row: 5 / 6;
       grid-column: 2 / 3; }
+      @media (max-width: 500px) {
+        .todoform__new--next {
+          width: 72px;
+          height: 28px; } }
   .todoform__review {
     background: -webkit-linear-gradient(#313130, #363633);
     -webkit-background-clip: text;
@@ -362,6 +404,9 @@ textarea {
     display: grid;
     grid-template-rows: 50px 50px 60px 50px 200px 60px;
     grid-template-columns: repeat(2, 1fr); }
+    @media (max-width: 500px) {
+      .todoform__review {
+        grid-template-rows: 36px 36px 44px 36px 144px 44px; } }
     .todoform__review--instruction {
       grid-column: 1 / -1;
       grid-row: 1 / 2;
@@ -424,6 +469,10 @@ textarea {
   grid-template-rows: 1fr 2fr 1fr 2fr;
   grid-template-columns: 250px;
   justify-content: center; }
+  @media (max-width: 500px) {
+    .login-form {
+      width: 275px;
+      height: 360px; } }
   .login-form__title {
     background: -webkit-linear-gradient(#313130, #363633);
     -webkit-background-clip: text;
